creado el controlador de parcela y probado